--- a/src/components/icons/linkedinIcon.astro
+++ b/src/components/icons/linkedinIcon.astro
@@ -1,20 +1,5 @@
-<svg
-	enable-background='new 0 0 32 32'
-	height='32px'
-	id='Layer_1'
-	version='1.0'
-	viewBox='0 0 32 32'
-	width='32px'
-	xml:space='preserve'
-	xmlns='http://www.w3.org/2000/svg'
-	xmlns:xlink='http://www.w3.org/1999/xlink'
-	><g
-		><path
-			d='M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z'
-			fill='#007BB5'></path><g
-			><rect fill='#FFFFFF' height='14' width='4' x='7' y='11'></rect><path
-				d='M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z'
-				fill='#FFFFFF'></path><circle cx='9' cy='8' fill='#FFFFFF' r='2'></circle></g
-		></g
-	><g></g><g></g><g></g><g></g><g></g><g></g></svg
->
+<svg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'>
+	<path
+		d='M15.3994 28.1056V17.3005H11.8111V28.1056H15.3998H15.3994ZM13.606 15.8255C14.857 15.8255 15.6359 14.9958 15.6359 13.9589C15.6125 12.8983 14.857 12.0918 13.6298 12.0918C12.4017 12.0918 11.5996 12.8983 11.5996 13.9588C11.5996 14.9957 12.3782 15.8254 13.5825 15.8254H13.6057L13.606 15.8255ZM17.3856 28.1056H20.9735V22.0722C20.9735 21.7497 20.997 21.4263 21.0918 21.196C21.351 20.5505 21.9414 19.8823 22.9329 19.8823C24.231 19.8823 24.7506 20.8731 24.7506 22.3258V28.1056H28.3385V21.9103C28.3385 18.5916 26.5685 17.0472 24.2078 17.0472C22.2723 17.0472 21.4222 18.1299 20.9499 18.8674H20.9738V17.3009H17.3857C17.4326 18.3145 17.3855 28.106 17.3855 28.106L17.3856 28.1056Z'
+		fill='white'></path>
+</svg>
