--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -67,6 +67,12 @@ import { AstroFont } from 'astro-font'
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
 
+<!-- Fonts -->
+<link
+	href='https://fonts.googleapis.com/css2?family=K2D:wght@300;400;700;800&display=swap'
+	rel='stylesheet'
+/>
+
 <AstroFont
 	config={[
 		{
