Header and Icon update

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ const SOCIALNETWORKS = [
 
 	{
 		name: 'LinkedIn',
-		url: 'https://github.com/danielcgilibert/blog-template',
+		url: 'https://www.linkedin.com/in/long-nguy%E1%BB%85n-tr%E1%BA%A7n-ho%C3%A0ng-18332b200/',
 		icon: LinkedinIcon
 	}
 ]
